ALS-1224 & ALS-1227: References name and entry locations

--- a/als-actions/shared/src/test/resources/actions/hover/oas20-full-result.yaml
+++ b/als-actions/shared/src/test/resources/actions/hover/oas20-full-result.yaml
@@ -379,7 +379,8 @@ hovers:
     - Textual indication of the kind of security scheme used
   (102,9):
     - Textual indication of the kind of security scheme used
-  (103,7): []
+  (103,7):
+    - Human readable name for the object
   (103,17): []
   (103,25): []
   (105,5):
