--- a/als-server/js/node-package/package.json
+++ b/als-server/js/node-package/package.json
@@ -15,7 +15,7 @@
     "build:dist": "webpack --config ./webpack.config.js"
   },
   "dependencies": {
-    "ajv": "6.5.2",
+    "ajv": "^7.2.4",
     "amf-shacl-node": "1.1.0",
     "vscode-jsonrpc": "5.0.1",
     "vscode-languageserver-protocol": "3.15.3"
@@ -24,10 +24,10 @@
     "@babel/core": "^7.9.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.9.5",
-    "babel-loader": "^8.1.0",
-    "terser-webpack-plugin": "^2.3.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-merge": "^4.2.2"
+    "babel-loader": "^8.2.2",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-merge": "^5.7.3"
   }
 }
