--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ scala:
   - 2.12.11
 
 before_script:
-  # default $SBT_OPTS is irrelevant to sbt lancher
+  # default $SBT_OPTS is irrelevant to sbt launcher
   - unset SBT_OPTS
   - export JAVA_OPTS="-Xms2048M -Xmx2048M -Xss6M -XX:ReservedCodeCacheSize=256M -XX:-UseGCOverheadLimit"
 
