--- a/als-server/js/node-package/package.json
+++ b/als-server/js/node-package/package.json
@@ -17,6 +17,12 @@
   "dependencies": {
     "ajv": "6.5.2",
     "amf-shacl-node": "1.1.0",
+    "buffer": "^6.0.3",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "stream-http": "^3.1.1",
+    "url": "^0.11.0",
     "vscode-jsonrpc": "5.0.1",
     "vscode-languageserver-protocol": "3.15.3"
   },
@@ -25,6 +31,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.9.5",
     "babel-loader": "^8.2.2",
+    "process": "0.11.10",
     "terser-webpack-plugin": "^2.3.6",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
