adopt new hover description from AMF changes in OAS3

--- a/als-actions/shared/src/test/resources/actions/hover/oas30-full-result.yaml
+++ b/als-actions/shared/src/test/resources/actions/hover/oas30-full-result.yaml
@@ -686,9 +686,9 @@ hovers:
   (181,16):
     - Mapping of acceptable values for the node discriminator
   (182,11):
-    - Variable defined inside an URL template
+    - Value given to a discriminator that identifies a target Shape
   (182,32):
-    - OAS 3 link expression
+    - Defines a data type
   (183,9):
     - Human readable name for the object
   (183,16):
