Fix some actions and server tests

--- a/als-actions/shared/src/test/resources/actions/hover/async-api20-full-result.yaml
+++ b/als-actions/shared/src/test/resources/actions/hover/async-api20-full-result.yaml
@@ -454,7 +454,7 @@ hovers:
   (123,11):
     - Defines a data type
   (123,17):
-    - Defines a data type
+    - Properties associated to this node
   (124,8):
     - Defines a data type
   (124,10):
